Identify master station on iPhone correctly

--- a/css/main.css
+++ b/css/main.css
@@ -33,11 +33,15 @@
         overflow: hidden;
         text-overflow: clip;
     }
-    div.timeline-groups-text:before {
+    div.timeline-groups-text:not(.skip-numbering):before {
         content: "S" counter(station) "     ";
         white-space:pre;
         counter-increment: station;
     }
+    div.skip-numbering:before {
+        content: "M       ";
+        white-space:pre;
+    }    
 }
 
 div.ui-slider-switch {
